# call_me_maybe

./: .flake8  .gitignore  Makefile  README.md  manual_prediction.py  pyproject.toml
cmm_mouli/: Moulinette_changes.md  cambios.md  function_calling_results.json  pyproject.toml
cmm_mouli/data/correction/: function_calling_corrections.json
cmm_mouli/data_private/correction/: function_calling_corrections.json
cmm_mouli/moulinette/: __init__.py  __main__.py  extract_functions_info.py  functions_definition.py  generate_tests_and_corrections.py  output_formatter.py
data/input/: temp_function_calling_tests.json  temp_functions_definition.json  test_funcions.json  test_prompt.json
docs/: funcionamiento.md  hitos.md  note.txt
src/: __init__.py  __main__.py  arguments.py  cli.py  constants.py  constrained_decoder.py  engine.py  files.py  io_utils.py  llm.py  models.py  pipeline.py  ports.py  schema_validator.py  tokenizer.py
src/application/: __init__.py  argument_decoder.py  argument_schema.py  extract_arguments.py  ports.py  predict_next_token.py  process_prompts.py  select_function.py
src/domain/: __init__.py  exceptions.py  models.py
src/infrastructure/: __init__.py  json_files.py  qwen_adapter.py
src/interfaces/: __init__.py  cli.py
tests/: test_argument_decoder.py  test_argument_schema.py  test_cli.py  test_domain_models.py  test_engine.py  test_extract_arguments.py  test_files.py  test_json_files.py  test_llm.py  test_models.py  test_predict_next_token.py  test_process_prompts.py  test_qwen_adapter.py  test_select_function.py  test_tokenizer.py
