[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding for small LLMs."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.mypy]
exclude = [
    "^\\.venv/",
    "^data/output/",
    "^docs/",
    "^llm_sdk/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
